add subscription by namespace
